--- a/app/index.html
+++ b/app/index.html
@@ -9,12 +9,12 @@
         <!-- build:css(.) styles/vendor.css -->
         <!-- bower:css -->
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" href="styles/jquery-jvectormap-1.2.2.css" type="text/css" media="screen"/>
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
+        <link rel="stylesheet" href="styles/jquery-jvectormap-1.2.2.css" type="text/css" media="screen"/>
     </head>
     <body ng-app="beenToApp">
         <!--[if lt IE 7]>
@@ -66,6 +66,7 @@
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
+        <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
