--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
         <!-- endbuild -->
-        <link rel="stylesheet" href="styles/jquery-jvectormap-1.2.2.css" type="text/css" media="screen"/>
+        <link rel="stylesheet" href="styles/jquery-jvectormap.css" type="text/css" media="screen"/>
     </head>
     <body ng-app="beenToApp">
         <!--[if lt IE 7]>
@@ -76,7 +76,7 @@
         <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
 
-        <script src="scripts/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
+        <script src="scripts/jvectormap/jquery.jvectormap.min.js"></script>
 		<script src="scripts/jvectormap/jquery-jvectormap-world-mill-with-antarctica-en.js"></script> 
 
 		</body>
